crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__scf__tests__r#while__compile_with_multiple_arguments_and_results.snap
---
source: crates/tracel-mlir-rs/src/dialect/scf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %c0 = arith.constant 0 : index
    %0:2 = scf.while (%arg0 = %c0, %arg1 = %c0) : (index, index) -> (index, index) {
      %false = arith.constant false
      %c42 = arith.constant 42 : index
      scf.condition(%false) %c42, %c42 : index, index
    } do {
    ^bb0(%arg0: index, %arg1: index):
      %c42 = arith.constant 42 : index
      scf.yield %c42, %c42 : index, index
    }
    return
  }
}
